--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@quinninc/rn-core": "^0.6.8",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-masked-view/masked-view": "^0.2.9",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-video": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
